<resources>
    <string name="app_name">Sample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_third_fragment">Open third fragment</string>
    <string name="open_second_fragment">Open second fragment</string>
    <string name="id_photo_here">ID PHOTO HERE</string>
    <string name="selfie_here">SELFIE HERE</string>
    <string name="upload_images">upload images</string>
</resources>