<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.poatek.sample.ui.scenes.first.FirstViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context="ui.scenes.first.FirstFragment">

        <!-- TODO: fix new xml id-->
        <Button
            android:id="@+id/secondFragmentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/open_second_fragment" />

        <Button
            android:id="@+id/thirdFragmentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/open_third_fragment" />

        <TextView
            android:id="@+id/analyze_result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="60dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="3dp"
            android:src="@drawable/image_border"
            android:contentDescription="@string/selfie_here" />

        <ImageView
            android:id="@+id/imageViewID"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="3dp"
            android:src="@drawable/image_border"
            android:contentDescription="@string/id_photo_here" />

        <Button
            android:id="@+id/uploadImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/upload_images" />

        <TextView
            android:id="@+id/viewModelDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@{viewModel.viewModelInitDate}"
            tools:text="ViewModel initialized..." />

    </LinearLayout>
</layout>

